# Task-Manager

./: .gitignore  .txt  CMakeCache.txt  CMakeLists.txt  Makefile  Menu.cpp  Menu.h  README.md  Remind.cpp  Remind.h  SreejaPa.txt  User.cpp  User.h  a.out  cmake_install.cmake  editTask.cpp  editTask.h  elisa.txt  main.cpp  menu.h  sniv.txt  spagi.txt  sreeja1.txt  sreep.txt  task.cpp  task.h  taskList.cpp  taskList.h  taskListEdit.cpp  taskListEdit.h  test.cpp  us.txt  userLogin.txt  userTests.cpp  viewPages.cpp  viewPages.h  viewSchedule.cpp  viewSchedule.h  vkupp.txt
test/: taskListtest.cpp  testViewSchedule.cpp  test_rem.cpp  userTests.cpp
